# DFSAttn

./: .gitignore  README.md  dataloader.py  hyvideo_t2v_720p_dfs.sh  hyvideo_t2v_inference.py  requirements.txt  wan21_t2v_720p_dfs.sh  wan21_t2v_inference.py
dfsattn/: attention_hyvideo.py  attention_wan.py  attn_processor.py  fullattention.py  replace_hyvideo.py  replace_wan.py
dfsattn/kernels/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  __init__.py  setup.sh
dfsattn/kernels/include/norm/: cutlass_layer_norm.cuh
dfsattn/kernels/triton/: __init__.py
dfsattn/utils/: __init__.py  order.py  visualization.py
eval/vbench/: get_prompts.py
examples/: prompts.txt
